tests/ui/associated-types/associated-types-for-unimpl-trait.stderr
error[E0277]: the trait bound `Self: Get` is not satisfied
  --> $DIR/associated-types-for-unimpl-trait.rs:11:41
   |
LL |     fn uhoh<U: Get>(&self, foo: U, bar: <Self as Get>::Value) where Self: Sized {}
   |                                         ^^^^^^^^^^^^^^^^^^^^ the trait `Get` is not implemented for `Self`
   |
help: consider further restricting `Self`
   |
LL |     fn uhoh<U: Get>(&self, foo: U, bar: <Self as Get>::Value) where Self: Sized, Self: Get {}
   |                                                                                +++++++++++

error[E0277]: the trait bound `Self: Get` is not satisfied
  --> $DIR/associated-types-for-unimpl-trait.rs:11:41
   |
LL |     fn uhoh<U: Get>(&self, foo: U, bar: <Self as Get>::Value) where Self: Sized {}
   |                                         ^^^^^^^^^^^^^^^^^^^^ the trait `Get` is not implemented for `Self`
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: consider further restricting `Self`
   |
LL |     fn uhoh<U: Get>(&self, foo: U, bar: <Self as Get>::Value) where Self: Sized, Self: Get {}
   |                                                                                +++++++++++

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
